# zotero.notion-ghstars

./: .env.example  README.md  main.py  pyproject.toml
tests/: test_config.py
