[project]
name = "zotero.notion-ghstars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "notion-client>=2.7.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
